--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "barbel": "^0.0.9",
     "bootstrap": "^5.3.2",
     "joi-browser": "^13.4.0",
     "react": "^16.0.0",
